--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -17,88 +17,94 @@
                     <div class="block--row-strech">
                         {% include "common/display_field_if_exists.html" with label="Nombre de logements" value=lot.nb_logements object_field="lot__nb_logements__"|add:lot_uuid %}
                     </div>
-                    <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                        <table  aria-label="Logements">
-                            <thead>
-                                <tr>
-                                    {% if convention|display_comments %}
-                                        {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' callback_click="refresh_opened_comments" %}
-                                    {% endif %}
-                                    <th scope="col" class="col__width--150">Désignation {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Type {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Surface habitable {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Surface des annexes réelle {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Surface des annexes retenue dans la SU {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Surface Utile {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Loyer maximum en € par m² de surface utile {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Coefficient propre au logement {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/form/required_field_star.html" %}</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for logement in logements %}
-                                    {% with logement_uuid=logement.uuid|slugify %}
-                                        {% with main_object_field="logement__uuid__"|add:logement_uuid %}
-                                            <tr id="{{main_object_field}}_group">
-                                                {% if convention|display_comments %}
-                                                    <td id="{{main_object_field}}_div">
-                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" callback_click="refresh_opened_comments" %}
+                    {% if logements %}
+                        <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                            <table  aria-label="Logements">
+                                <thead>
+                                    <tr>
+                                        {% if convention|display_comments %}
+                                            {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' callback_click="refresh_opened_comments" %}
+                                        {% endif %}
+                                        <th scope="col" class="col__width--150">Désignation {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Type {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Surface habitable {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Surface des annexes réelle {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Surface des annexes retenue dans la SU {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Surface Utile {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Loyer maximum en € par m² de surface utile {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Coefficient propre au logement {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/form/required_field_star.html" %}</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for logement in logements %}
+                                        {% with logement_uuid=logement.uuid|slugify %}
+                                            {% with main_object_field="logement__uuid__"|add:logement_uuid %}
+                                                <tr id="{{main_object_field}}_group">
+                                                    {% if convention|display_comments %}
+                                                        <td id="{{main_object_field}}_div">
+                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" callback_click="refresh_opened_comments" %}
+                                                        </td>
+                                                    {% endif %}
+                                                    <td>
+                                                        {{ logement.designation }}
                                                     </td>
-                                                {% endif %}
-                                                <td>
-                                                    {{ logement.designation }}
-                                                </td>
-                                                <td>
-                                                    {{ logement.typologie }}
-                                                </td>
-                                                <td id="lgt_sh">
-                                                    {{ logement.surface_habitable|floatformat:2 }}
-                                                </td>
-                                                <td id="lgt_sa">
-                                                    {{ logement.surface_annexes|floatformat:2 }}
-                                                </td>
-                                                <td id="lgt_sar">
-                                                    {{ logement.surface_annexes_retenue|floatformat:2 }}
-                                                </td>
-                                                <td id="lgt_su">
-                                                    {{ logement.surface_utile|floatformat:2 }}
-                                                </td>
-                                                <td>
-                                                    {{ logement.loyer_par_metre_carre|floatformat:2 }}
-                                                </td>
-                                                <td>
-                                                    {{ logement.coeficient|floatformat:4 }}
-                                                </td>
-                                                <td id="lgt_loyer">
-                                                    {{ logement.loyer|floatformat:2 }}
-                                                </td>
-                                            </tr>
+                                                    <td>
+                                                        {{ logement.typologie }}
+                                                    </td>
+                                                    <td id="lgt_sh">
+                                                        {{ logement.surface_habitable|floatformat:2 }}
+                                                    </td>
+                                                    <td id="lgt_sa">
+                                                        {{ logement.surface_annexes|floatformat:2 }}
+                                                    </td>
+                                                    <td id="lgt_sar">
+                                                        {{ logement.surface_annexes_retenue|floatformat:2 }}
+                                                    </td>
+                                                    <td id="lgt_su">
+                                                        {{ logement.surface_utile|floatformat:2 }}
+                                                    </td>
+                                                    <td>
+                                                        {{ logement.loyer_par_metre_carre|floatformat:2 }}
+                                                    </td>
+                                                    <td>
+                                                        {{ logement.coeficient|floatformat:4 }}
+                                                    </td>
+                                                    <td id="lgt_loyer">
+                                                        {{ logement.loyer|floatformat:2 }}
+                                                    </td>
+                                                </tr>
+                                            {% endwith %}
                                         {% endwith %}
-                                    {% endwith %}
-                                {% endfor %}
-                                <tr>
-                                    <td colspan=" {% if convention|display_comments %}3{% else %}2{% endif %}" class="fr-text--lg">
-                                        Total
-                                    </td>
-                                    <td id="total_sh" class="fr-text--lg">
-                                    </td>
-                                    <td id="total_sa" class="fr-text--lg">
-                                    </td>
-                                    <td id="total_sar" class="fr-text--lg">
-                                    </td>
-                                    <td id="total_su" class="fr-text--lg">
-                                    </td>
-                                    <td>
-                                    </td>
-                                    <td>
-                                    </td>
-                                    <td id="total_loyer" class="fr-text--lg">
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
+                                    {% endfor %}
+                                    <tr>
+                                        <td colspan=" {% if convention|display_comments %}3{% else %}2{% endif %}" class="fr-text--lg">
+                                            Total
+                                        </td>
+                                        <td id="total_sh" class="fr-text--lg">
+                                        </td>
+                                        <td id="total_sa" class="fr-text--lg">
+                                        </td>
+                                        <td id="total_sar" class="fr-text--lg">
+                                        </td>
+                                        <td id="total_su" class="fr-text--lg">
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td id="total_loyer" class="fr-text--lg">
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="fr-my-2w">
+                            <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucune logement.</em></p>
+                            <a class="fr-mb-1w fr-link" href="{% url target_url convention_uuid=convention.uuid %}">Ajouter un logement</a>
+                        </div>
+                    {% endif %}
                     {% include "common/display_field_if_exists.html" with label="loyer dérogatoire" value=lot.loyer_derogatoire object_field="lot__loyer_derogatoire__"|add:lot_uuid %}
                     {% include "common/display_field_if_exists.html" with label="Nombre de logements à louer en plus à des ménages dont les ressources n'excèdent pas le plafond" value=lot.lgts_mixite_sociale_negocies object_field="lot__lgts_mixite_sociale_negocies__"|add:lot_uuid %}
 
