--- a/templates/conventions/common/form_annexes.html
+++ b/templates/conventions/common/form_annexes.html
@@ -11,7 +11,7 @@
     <div class="fr-col-md-12">
         <h4>Annexes associées aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
         <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-            <p class="fr-mb-1w">Attention, les annexes concernées sont ici les jardins, les caves et les surfaces de terrasse au-delà de 9 m² (ex : Pour une terrasse d’une surface totale de 10 m², renseignez ici uniquement 1 m², les 9m² sont intégrés dans le calcul de la surface utile)</p>
+            <p class="fr-mb-1w">Attention, les annexes concernées sont ici les jardins, les cours et les surfaces de terrasse au-delà de 9 m² (ex : Pour une terrasse d’une surface totale de 10 m², renseignez ici uniquement 1 m², les 9m² sont intégrés dans le calcul de la surface utile)</p>
         </div>
         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
             {% include "common/form/download_upload_form.html" with file_type='annexes' upform=upform  what='annexes'%}
