Use visual select on from zero / bailleur select

--- a/templates/common/form/input_multiselect.html
+++ b/templates/common/form/input_multiselect.html
@@ -8,7 +8,7 @@
     <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
         <select
             multiple
-            placeholder="Ajouter les départements permattant de filtrer géographiquement"
+            placeholder="Ajouter les départements permettant de filtrer géographiquement"
             class="apilos-multiselect"
             id="testbase"
             name="{{form_input.html_name}}"
