--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -4,6 +4,25 @@
 
 {% block page_title %}Selection - APiLos{% endblock%}
 
+{% block javascript_extras %}
+    <script src="{% static "virtual-select/dist/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+        document.addEventListener('DOMContentLoaded', function () {
+            VirtualSelect.init({
+                ele: '#id_bailleur',
+                multiple: false,
+                hideClearButton: true,
+                search: true
+            });
+            console.log("Ici");
+        });
+    </script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static "virtual-select/dist/virtual-select.min.css" %}">
+{% endblock %}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         <div class="fr-container">
