--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -51,7 +51,7 @@
                                 <td>{{convention.programme.ville}}</td>
                                 <td>{{convention.lot.nb_logements}}</td>
                                 <td title="{{convention.statut_for_template.statut_display}}">
-                                    <div class="fr-p-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
+                                    <div class="fr-p-1w apilos-tag-status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
                                         <span><strong>
                                             {{convention.short_statut_for_template}}
                                         </strong></span>
