S678 avenants dans liste convention (#484)
* update: init ad avenant in convention list

* update: label statut for search form + statut for instructeur or bailleur

* update: design status in convention list

* fix test

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -3,7 +3,6 @@
 <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-md-12 ">
-
             <form class="fr-my-3w" method="get" action="" id="search_table">
                 <input type="hidden" id="order_by" name="order_by" value="{{conventions.order_by}}">
                 <input type="hidden" id="page" name="page" value="{{conventions.page}}">
@@ -140,11 +139,7 @@
 
                                     <tr id="convention_redirect_{{convention.uuid}}" class="clickable {% if convention|display_redirect_sent %}sent{% elif convention|display_redirect_post_action %}signed{% endif %}">
                                         <td title="{{convention.statut_for_template.statut_display}}">
-                                            <span class="fr-p-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
-                                                <strong>
-                                                    {{convention.short_statut_for_template}}
-                                                </strong>
-                                            </span>
+                                            {% include "conventions/home/statut_tag.html"  %}
                                             <script type="text/javascript" nonce="{{request.csp_nonce}}">
                                                 document.addEventListener('DOMContentLoaded', function () {
                                                     document.getElementById('convention_redirect_{{convention.uuid}}').addEventListener('click', function(){
@@ -168,7 +163,14 @@
                                             <td>{{convention.programme.administration}}</td>
                                         {% endif %}
                                         <td>
-                                            <strong>{{convention.programme.nom}}</strong><br/>
+                                            <div>
+                                                <strong>
+                                                    <span class="apilos-long-name">{{convention.programme.nom}}</span>
+                                                </strong>
+                                                {% if convention.is_avenant %}
+                                                    <span class="text-title-blue-france fr-p-1w fr-ml-1w apilos-tag-avenant background-white">Avenant</span>
+                                                {%endif%}
+                                            </div>
                                             <em data-test-role="programme-galion-cell">{{convention.programme.numero_galion}}</em>
                                         </td>
                                         <td data-test-role="programme-financement-cell">{{convention.financement}}</td>
