--- a/static/css/main.css
+++ b/static/css/main.css
@@ -232,6 +232,13 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .apilos-avenant_type:not(:last-child):after {
   content: ", ";
 }
+.apilos-long-name {
+  display: inline-block;
+  max-width: calc(100% - 100px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+}
 
 .block--row-strech {
   display: flex;
@@ -693,57 +700,38 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
  * Display convention status
  */
 
- .apilos-colored_status {
+.apilos-tag-status {
+   white-space: nowrap;
+   display: inline;
+}
+.apilos-tag-status:before {
+  margin: .5rem;
+}
+.apilos-tag-avenant {
   border-radius: 5px;
   border: 1px solid rgba(70, 75, 99, 0.2);
   white-space: nowrap;
 }
-
-.apilos-colored_status span{
-    color: #464B63;
-}
-
-.apilos-colored_status--Projet {
-  background-color: #D4E7F4;
-}
-
-.apilos-colored_status--Instruction_requise {
-  background-color: #FDCCCC;
-}
-
-.apilos-colored_status--Corrections_requises {
-  background-color: #FEDCD1;
-}
-
-.apilos-colored_status--A_signer {
-  background-color: #FEEDD1;
-}
-
-.apilos-colored_status--Signee {
-  background-color: #D4F4E1;
-}
-.apilos-colored_status--Resiliee, .apilos-colored_status--Annulee_en_suivi, .apilos-colored_status--Denoncee {
-  background-color: #E2E2E2;
+[class*=" fr-alert--"], [class^="fr-alert-"] {
+  background-color: white;
 }
 .fr-alert--Projet {
   box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #4EBEE1;
-  background-color: #fff;
 }
 .fr-alert--Instruction_requise {
   box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #F36B58;
-  background-color: #fff;
 }
 .fr-alert--Corrections_requises {
   box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #F3A358;
-  background-color: #fff;
 }
 .fr-alert--A_signer {
   box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #EECA4A;
-  background-color: #fff;
 }
 .fr-alert--Signee {
   box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #74CA66;
-  background-color: #fff;
+}
+.fr-alert--Resiliee {
+  box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #CCCCCC;
 }
 
 .apilos-alert {
