fix display of 'Gérer ses habilitations' button

--- a/static/css/ui_siap.css
+++ b/static/css/ui_siap.css
@@ -20,6 +20,8 @@
 .habilitation-bloc .fr-btn {
   display: block;
   text-align: left;
+  width: 100%;
+  z-index: 10001;
 }
 
 .habilitation-bloc {
@@ -29,8 +31,7 @@
   font-size: 14px;
   right: 1rem;
   top: auto;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+  padding: 0;
   margin-right: 0;
   box-shadow: 0 16px 16px -16px #00000052,0 8px 16px #0000001a;
 }
@@ -42,6 +43,7 @@
 
 .habilitation-bloc .fr-menu__list {
   padding: 0;
+  margin-bottom: 0;
 }
 .habilitation-bloc .fr-menu__list li {
   text-align: left;
