manage btn as activated

--- a/static/css/ui_siap.css
+++ b/static/css/ui_siap.css
@@ -21,7 +21,6 @@
   display: block;
   text-align: left;
   width: 100%;
-  z-index: 10001;
 }
 
 .habilitation-bloc {
@@ -41,13 +40,13 @@
   max-height: 400px;
 }
 
-.habilitation-bloc .fr-menu__list {
+.habilitation-bloc .fr-menu__list ul {
   padding: 0;
   margin-bottom: 0;
 }
-.habilitation-bloc .fr-menu__list li {
+.habilitation-bloc .fr-menu__list ul li {
   text-align: left;
 }
-.habilitation-bloc .fr-menu__list li:hover a {
+.habilitation-bloc .fr-menu__list ul li:hover a {
   text-decoration: none;
 }
