--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -11,5 +11,10 @@
         <div class="fr-container fr-my-6w h-80vh">
             <iframe src="{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{% url 'conventions:display_pdf' convention_uuid=convention.uuid %}" width="100%" height="1000px" nonce="{{request.csp_nonce}}"></iframe>
         </div>
+        {% if convention.attached|get_files_from_textfiles %}
+            <div class="fr-container fr-my-6w">
+                {% include "common/display_text_and_files_if_exists.html" with text=convention.attached|get_text_from_textfiles label="Fichiers à joindre à la convention" file_list=convention.attached|get_files_from_textfiles %}
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
