--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -39,7 +39,9 @@
                     <form method="post" action="">
                         {% csrf_token %}
                         <div class="fr-col-12">
-                            {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 %}
+                            <div class="select-search fr-mb-3w">
+                                {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 %}
+                            </div>
 
                             {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 %}
 
