--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -60,7 +60,7 @@
                                 {% endif %}
                             </div>
                         </div>
-                        {% if not convention.programme.is_foyer %}
+                        {% if not convention.programme.is_foyer and not convention.programme.is_residence %}
                             <h4 class="fr-mt-2w">
                                 Locaux auxquels ne s'applique pas la présente convention
                             </h4>
