--- a/templates/conventions/recapitulatif/collectif.html
+++ b/templates/conventions/recapitulatif/collectif.html
@@ -14,45 +14,51 @@
                         </div>
                         {% include "conventions/actions/goto.html" %}
                     </div>
-
-                    <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                        <table  aria-label="Surface à usage collectif">
-                            <thead>
-                                <tr>
-                                    {% if convention|display_comments %}
-                                        {% include 'common/utils/comments_header.html' with object_name='locaux_collectifs' label='LocauxCollectifs' callback_click="refresh_opened_comments" %}
-                                    {% endif %}
-                                    <th scope="col" class="col__width--150">Type de local (désignation) {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Surface Habitable {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Nombre {% include "common/form/required_field_star.html" %}</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for locaux_collectif in locaux_collectifs %}
-                                    {% with locaux_collectif_uuid=locaux_collectif.uuid|slugify %}
-                                        {% with main_object_field="locaux_collectif__uuid__"|add:locaux_collectif_uuid %}
-                                            <tr id="{{main_object_field}}_group">
-                                                {% if convention|display_comments %}
-                                                    <td id="{{main_object_field}}_div">
-                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Locaux Collectif" callback_click="refresh_opened_comments" %}
+                    {% if locaux_collectifs %}
+                        <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                            <table  aria-label="Surface à usage collectif">
+                                <thead>
+                                    <tr>
+                                        {% if convention|display_comments %}
+                                            {% include 'common/utils/comments_header.html' with object_name='locaux_collectifs' label='LocauxCollectifs' callback_click="refresh_opened_comments" %}
+                                        {% endif %}
+                                        <th scope="col" class="col__width--150">Type de local (désignation) {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Surface Habitable {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Nombre {% include "common/form/required_field_star.html" %}</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for locaux_collectif in locaux_collectifs %}
+                                        {% with locaux_collectif_uuid=locaux_collectif.uuid|slugify %}
+                                            {% with main_object_field="locaux_collectif__uuid__"|add:locaux_collectif_uuid %}
+                                                <tr id="{{main_object_field}}_group">
+                                                    {% if convention|display_comments %}
+                                                        <td id="{{main_object_field}}_div">
+                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Locaux Collectif" callback_click="refresh_opened_comments" %}
+                                                        </td>
+                                                    {% endif %}
+                                                    <td>
+                                                        {{ locaux_collectif.type_local }}
                                                     </td>
-                                                {% endif %}
-                                                <td>
-                                                    {{ locaux_collectif.type_local }}
-                                                </td>
-                                                <td>
-                                                    {{ locaux_collectif.surface_habitable|floatformat:2 }}
-                                                </td>
-                                                <td>
-                                                    {{ locaux_collectif.nombre }}
-                                                </td>
-                                            </tr>
+                                                    <td>
+                                                        {{ locaux_collectif.surface_habitable|floatformat:2 }}
+                                                    </td>
+                                                    <td>
+                                                        {{ locaux_collectif.nombre }}
+                                                    </td>
+                                                </tr>
+                                            {% endwith %}
                                         {% endwith %}
-                                    {% endwith %}
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="fr-my-2w">
+                            <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucun type de locaux collectifs.</em></p>
+                            <a class="fr-mb-1w fr-link" href="{% url target_url convention_uuid=convention.uuid %}">Ajouter des locaux collectifs</a>
+                        </div>
+                    {% endif %}
 
                     {% include "common/display_field_if_exists.html" with label="Surface habitable totale en m²" value=lot.foyer_residence_nb_garage_parking object_field="lot__foyer_residence_nb_garage_parking__"|add:lot_uuid %}
                     {% include "common/display_textfield_if_exists.html" with label="Dépendances (nombre et surface)" value=lot.foyer_residence_dependance object_field="convention__foyer_residence_dependance__"|add:lot_uuid %}
