--- a/templates/conventions/recapitulatif/financement.html
+++ b/templates/conventions/recapitulatif/financement.html
@@ -74,7 +74,7 @@
                         </div>
                     {% endif %}
                     {% include "common/display_field_if_exists.html" with label="Date de fin de la convention" value=convention.date_fin_conventionnement object_field="convention__annee_fin_conventionnement__"|add:convention_uuid %}
-                    {% if convention.programme.is_foyer %}
+                    {% if convention.programme.is_foyer or convention.programme.is_residence %}
                         {% include "common/display_listfield_if_exists.html" with label="Historique de financement public" value=convention.historique_financement_public object_field="convention__historique_financement_public__"|add:convention_uuid %}
                     {% else %}
                         {% include "common/display_field_if_exists.html" with label="Fonds propres" value=convention.fond_propre object_field="convention__fond_propre__"|add:convention_uuid %}
