update: init new form

--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -21,8 +21,8 @@
 {% endblock %}
 
 {% block css_extras %}
-    <link rel="stylesheet" href="{% static "virtual-select/dist/virtual-select.min.css" %}">
-    <link rel="stylesheet" href="{% static "css/searchselect.css" %}">
+    <link rel="stylesheet" href="{% static 'virtual-select/dist/virtual-select.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/searchselect.css' %}">
 {% endblock %}
 
 {% block content %}
